--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -21,8 +21,8 @@
             </div>
             <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Sign in</button>
             <hr class="my-4">
-            <a class="btn btn-lg btn-google btn-block text-uppercase" type="submit" href="{{ googleAuthUrl }}"><i class="fab fa-google mr-2"></i> Sign in with Google</a>
-            <a class="btn btn-lg btn-facebook btn-block text-uppercase" type="submit"><i class="fab fa-facebook-f mr-2"></i> Sign in with Facebook</a>
+            <a class="btn btn-lg btn-google btn-block text-uppercase" href="{{ googleAuthUrl }}"><i class="fab fa-google mr-2"></i> Sign in with Google</a>
+            <a class="btn btn-lg btn-facebook btn-block text-uppercase" ><i class="fab fa-facebook-f mr-2"></i> Sign in with Facebook</a>
           </form>
         </div>
       </div>
